fix replaement buttons on small resolutions

--- a/src/applications/content-entries-app/entry/entry-flavours/entry-flavours.component.scss
+++ b/src/applications/content-entries-app/entry/entry-flavours/entry-flavours.component.scss
@@ -87,3 +87,9 @@
         border-left: 1px solid $kGrayscale6;
     }
 }
+
+@media screen and (max-width: 1310px) {
+    .kReplacementButtonsShown {
+        bottom: 22px !important;
+    }
+}
