--- a/src/applications/content-entries-app/entry/entry-flavours/flavor-replace-video/replace-media-button/replace-media-button.component.scss
+++ b/src/applications/content-entries-app/entry/entry-flavours/flavor-replace-video/replace-media-button/replace-media-button.component.scss
@@ -41,3 +41,11 @@
         height: 0;
     }
 }
+
+@media screen and (max-width: 1310px) {
+    .kFlavorReplaceButton {
+        width: 130px;
+        height: 48px;
+        margin-right: 10px;
+    }
+}
